--- a/src/styles/tienda.css
+++ b/src/styles/tienda.css
@@ -3,6 +3,7 @@
     padding: 25px;
     min-height: calc(100vh - 80px);
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 .header-principal h1,
@@ -17,6 +18,7 @@
     display: flex;
     flex-direction: column;
     min-width: 0;
+    min-height: 0;
 }
 
 
@@ -34,6 +36,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    flex: 1;
+    min-height: 0;
 }
 
 /* Tabla tiendas ajustes */
